# tinydsl

./: .coverage  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  gli.py  gli_dsl_tool.py  lexi.py  lexi_evaluator.py  lexi_interpreter.py  lexi_memory.py  pyproject.toml  pytest.ini  tinydsl_tool.py
.github/workflows/: publish.yml  test.yml
api/: main.py  routes.py  routes_gli.py  routes_lexi.py
docs/: NOVELTY_MARKERS.md  RL_FRAMEWORK.md
examples/: __init__.py  rl_compare_agents.py  rl_curriculum_learning.py  rl_simple_example.py
scripts/: __init__.py  check_contamination.py  evaluate_kait.py  test_all_contamination.py  test_kait_contamination.py
src/tinydsl/agent_tools/: generic_dsl_client.py  kait_agent.py  tinydsl_tool.py
src/tinydsl/api/: common_handlers.py  main.py  routes_gli.py  routes_lexi.py  routes_tinycalc.py  routes_tinymath.py  routes_tinysql.py
src/tinydsl/core/: __init__.py  base_dsl.py  dsl_registry.py  evaluator.py  logging_config.py  memory.py
src/tinydsl/data/: gli_grammar.lark  gli_tasks.json  lexi_examples.json  lexi_grammar.lark  tinycalc_examples.json  tinycalc_grammar.lark  tinycalc_tasks.json  tinymath_examples.json  tinymath_grammar.lark  tinymath_tasks.json  tinysql_examples.json  tinysql_grammar.lark  tinysql_tasks.json
src/tinydsl/gli/: gli.py  gli_evaluator.py  renderers.py
src/tinydsl/lexi/: lexi.py  lexi_evaluator.py
src/tinydsl/parser/: ast_parser.py  base_parser.py  grammar_analyzer.py  grammar_novelty.py  lark_gli_parser.py  lark_lexi_parser.py  lark_math_parser.py  lark_tinycalc_parser.py  lark_tinymath_parser.py  lark_tinysql_parser.py
src/tinydsl/rl/: __init__.py
src/tinydsl/tinycalc/: __init__.py  tinycalc.py  tinycalc_evaluator.py
src/tinydsl/tinymath/: __init__.py  tinymath.py  tinymath_evaluator.py
src/tinydsl/tinysql/: __init__.py  (+2 more)
tests/: README.md  __init__.py  conftest.py  test_agent_tools.py  test_ast_endpoints.py  test_core.py  test_evaluators.py  test_gli.py  test_lexi.py  test_rl.py  test_tinycalc.py  test_tinymath.py  test_tinysql.py
(+14 files in other folders)
