[project]
name = "tinydsl"
description = "A modular agent-ready framework for exploring domain-specific languages (DSLs) with KAIT protocol support"
readme = "README.md"
authors = [{ name = "Deepak" }]
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["tinydsl", "dsl", "domain specific language", "agent", "kait", "knowledge acquisition"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.119.0",
    "lark>=1.3.0",
    "loguru>=0.7.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel","setuptools-scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "dist*", "output*"]

[tool.setuptools.package-data]
"tinydsl" = ["data/*.json", "data/*.lark"]

[tool.setuptools_scm]
fallback_version = "0.0.1"

[project.urls]
Homepage = "https://github.com/deepsaia/tinydsl"
Repository = "https://github.com/deepsaia/tinydsl"
Documentation = "https://github.com/deepsaia/tinydsl#readme"
Issues = "https://github.com/deepsaia/tinydsl/issues"
